fixed layout padding on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -127,7 +127,6 @@ textarea {
 /* ------------------------------------------------- */
 
 .container {
-  padding: 0rem 2rem;
   margin: auto auto 4rem; /* Space for footer */
   max-width: 80rem;
 }
